--- a/NonProfitCustomMap-HW2.html
+++ b/NonProfitCustomMap-HW2.html
@@ -33,7 +33,7 @@
       }
 // Don't forget your API Key below vv
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOURAPIKEYHERE&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCt8mDj9e1NthaW3ZRQAo_Hh40zzDDxhYY&callback=initMap"
     async defer></script>
   </body>
 </html>
