added header within body

--- a/NonProfitCustomMap-HW2.html
+++ b/NonProfitCustomMap-HW2.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
-    <title> Homework 2: Customized Map for Saga Education </title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <title>Homework 2: Customized Map for Saga Education</title>
+/*  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> */
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -18,8 +20,13 @@
         padding: 0;
       }
     </style>
+   
   </head>
+  
   <body>
+    <h3>90-753: Advanced GIS</h3>
+    <h3>Caroline Sabin</h3>
+
     <div id="map"></div>
     <script>
       function initMap() {
