--- a/NonProfitCustomMap-HW2.html
+++ b/NonProfitCustomMap-HW2.html
@@ -35,15 +35,211 @@
           center: {lat: 40.4583498, lng: -80.079528},  // Setting the center to Pittsburgh, change as you like
           zoom: 15,  // Setting a zoom scale for Pittsburgh
           styles:    // Add JSON from Map Style Wizard below this line...
-          [{"elementType":"geometry","stylers":[{"color":"#f5f5f5"}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"elementType":"labels.text.fill","stylers":[{"color":"#616161"}]},{"elementType":"labels.text.stroke","stylers":[{"color":"#f5f5f5"}]},{"featureType":"administrative.country","elementType":"geometry.stroke","stylers":[{"color":"#000000"}]},{"featureType":"administrative.neighborhood","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#23d9c7"},{"lightness":20}]},{"featureType":"poi.medical","elementType":"geometry","stylers":[{"color":"#f25764"},{"lightness":20}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#7ad94e"},{"lightness":20}]},{"featureType":"poi.park","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"road","stylers":[{"color":"#f29984"},{"weight":0.5}]},{"featureType":"road.arterial","elementType":"geometry.fill","stylers":[{"color":"#f29985"},{"lightness":55},{"weight":0.5}]},{"featureType":"road.arterial","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"road.highway","elementType":"geometry","stylers":[{"color":"#f25764"},{"visibility":"on"},{"weight":1}]},{"featureType":"road.local","elementType":"geometry.fill","stylers":[{"color":"#f29985"},{"lightness":55},{"weight":0.5}]},{"featureType":"road.local","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#e5e5e5"}]},{"featureType":"water","elementType":"geometry","stylers":[{"color":"#012840"}]},{"featureType":"water","elementType":"labels.text.fill","stylers":[{"color":"#ffffff"}]}]
-
-
+            [
+              {
+                "elementType": "geometry",
+                "stylers": [
+                  {
+                    "color": "#f5f5f5"
+                  }
+                ]
+              },
+              {
+                "elementType": "labels.icon",
+                "stylers": [
+                  {
+                    "visibility": "off"
+                  }
+                ]
+              },
+              {
+                "elementType": "labels.text.fill",
+                "stylers": [
+                  {
+                    "color": "#616161"
+                  }
+                ]
+              },
+              {
+                "elementType": "labels.text.stroke",
+                "stylers": [
+                  {
+                    "color": "#f5f5f5"
+                  }
+                ]
+              },
+              {
+                "featureType": "administrative.country",
+                "elementType": "geometry.stroke",
+                "stylers": [
+                  {
+                    "color": "#000000"
+                  }
+                ]
+              },
+              {
+                "featureType": "administrative.neighborhood",
+                "elementType": "labels",
+                "stylers": [
+                  {
+                    "visibility": "off"
+                  }
+                ]
+              },
+              {
+                "featureType": "poi",
+                "elementType": "geometry",
+                "stylers": [
+                  {
+                    "color": "#23d9c7"
+                  },
+                  {
+                    "lightness": 20
+                  }
+                ]
+              },
+              {
+                "featureType": "poi.medical",
+                "elementType": "geometry",
+                "stylers": [
+                  {
+                    "color": "#f25764"
+                  },
+                  {
+                    "lightness": 20
+                  }
+                ]
+              },
+              {
+                "featureType": "poi.park",
+                "elementType": "geometry",
+                "stylers": [
+                  {
+                    "color": "#7ad94e"
+                  },
+                  {
+                    "lightness": 20
+                  }
+                ]
+              },
+              {
+                "featureType": "poi.park",
+                "elementType": "labels",
+                "stylers": [
+                  {
+                    "visibility": "off"
+                  }
+                ]
+              },
+              {
+                "featureType": "road",
+                "stylers": [
+                  {
+                    "color": "#f29984"
+                  },
+                  {
+                    "weight": 0.5
+                  }
+                ]
+              },
+              {
+                "featureType": "road.arterial",
+                "elementType": "geometry.fill",
+                "stylers": [
+                  {
+                    "color": "#f29985"
+                  },
+                  {
+                    "lightness": 55
+                  },
+                  {
+                    "weight": 0.5
+                  }
+                ]
+              },
+              {
+                "featureType": "road.arterial",
+                "elementType": "labels",
+                "stylers": [
+                  {
+                    "visibility": "off"
+                  }
+                ]
+              },
+              {
+                "featureType": "road.highway",
+                "elementType": "geometry",
+                "stylers": [
+                  {
+                    "color": "#f25764"
+                  },
+                  {
+                    "visibility": "on"
+                  },
+                  {
+                    "weight": 1
+                  }
+                ]
+              },
+              {
+                "featureType": "road.local",
+                "elementType": "geometry.fill",
+                "stylers": [
+                  {
+                    "color": "#f29985"
+                  },
+                  {
+                    "lightness": 55
+                  },
+                  {
+                    "weight": 0.5
+                  }
+                ]
+              },
+              {
+                "featureType": "road.local",
+                "elementType": "labels",
+                "stylers": [
+                  {
+                    "visibility": "off"
+                  }
+                ]
+              },
+              {
+                "featureType": "transit",
+                "elementType": "geometry",
+                "stylers": [
+                  {
+                    "color": "#e5e5e5"
+                  }
+                ]
+              },
+              {
+                "featureType": "water",
+                "elementType": "geometry",
+                "stylers": [
+                  {
+                    "color": "#012840"
+                  }
+                ]
+              },
+              {
+                "featureType": "water",
+                "elementType": "labels.text.fill",
+                "stylers": [
+                  {
+                    "color": "#ffffff"
+                  }
+                ]
+              }
+            ]
+          
 // ..and here's the end of JSON from Style Wizard          
         });
       }
 // Don't forget your API Key below vv
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCt8mDj9e1NthaW3ZRQAo_Hh40zzDDxhYY&callback=initMap"
-    async defer></script>
+    defer></script>
   </body>
 </html>
