--- a/NonProfitCustomMap-HW2.html
+++ b/NonProfitCustomMap-HW2.html
@@ -32,8 +32,8 @@
       function initMap() {
         // Styles a map in custom mode.
         var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 40.4583498, lng: -80.079528},  // Setting the center to Pittsburgh, change as you like
-          zoom: 15,  // Setting a zoom scale for Pittsburgh
+          center: {lat: 42.348620, lng: -71.193830},  // Setting the center of the map to headquarters in Newton, MA
+          zoom: 15,  // Setting a zoom scale
           styles:    // Add JSON from Map Style Wizard below this line...
             [
               {
