--- a/NonProfitCustomMap-HW2.html
+++ b/NonProfitCustomMap-HW2.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <title>Homework 2: Customized Map for Saga Education</title>
+    <title><center>Homework 2: Customized Map for Saga Education</center></title>
 <!--  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
@@ -24,8 +24,8 @@
   </head>
   
   <body>
-    <h3>90-753: Advanced GIS</h3>
-    <h3>Caroline Sabin</h3>
+    <h3><center>90-753: Advanced GIS</center></h3>
+    <h3><center>Caroline Sabin</center></h3>
 
     <div id="map"></div>
     <script>
