--- a/NonProfitCustomMap-HW2.html
+++ b/NonProfitCustomMap-HW2.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <title><center>Homework 2: Customized Map for Saga Education</center></title>
+    <title>Homework 2: Customized Map for Saga Education</title>
 <!--  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
