--- a/NonProfitCustomMap-HW2.html
+++ b/NonProfitCustomMap-HW2.html
@@ -32,7 +32,7 @@
       function initMap() {
         // Styles a map in custom mode.
         var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 42.348620, lng: -71.193830},  // Setting the center of the map to headquarters in Newton, MA
+<!--          center: {lat: 42.348620, lng: -71.193830},  // Setting the center of the map to headquarters in Newton, MA -->
           zoom: 15,  // Setting a zoom scale
           styles:    // Add JSON from Map Style Wizard below this line...
             [
