--- a/NonProfitCustomMap-HW2.html
+++ b/NonProfitCustomMap-HW2.html
@@ -24,15 +24,15 @@
   </head>
   
   <body>
-    <h3>90-753: Advanced GIS</h3>
-    <h3>Caroline Sabin</h3>
+    <h3><center>90-753: Advanced GIS</center></h3>
+    <h3><center>Caroline Sabin</center></h3>
 
     <div id="map"></div>
     <script>
       function initMap() {
         // Styles a map in custom mode.
         var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 40.4583498, lng: -80.079528},  // Setting the center to Pittsburgh, change as you like
+          center: {lat: 42.348621, lng: -71.193832},  // Setting the center to Pittsburgh, change as you like
           zoom: 15,  // Setting a zoom scale for Pittsburgh
           styles:    // Add JSON from Map Style Wizard below this line...
             [
